# minutes_diff

./: .gitignore  README.md  pyproject.toml
src/minutes_diff/: minutes_diff.py
